Configured default routes and EJS views

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -21,12 +21,12 @@
                 <img src="https://i.imgur.com/G8dZR4s.jpg" alt="Right Horse" width="400" height="400">
             </section>
             <section id="buttons">
-                <form action="game.html" method="GET">
+                <form action="/play" method="GET">
                     <input type="submit" value="Play Now!"/>
                 </form>
-                <form action="https://www.chess.com/learn-how-to-play-chess" method="GET">
-                    <input type="submit" value="How To Play" />
-                </form>
+                <a href="https://www.chess.com/learn-how-to-play-chess" target="_blank">
+                    <button><span>How to play?</span></button>
+                </a>
             </section>
             <section id="stats">
             </section>
