Worked on client-side, added chess piece sprites

--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../stylesheets/play.css">
     </head>
     <header>
         <div id="timer">
@@ -202,4 +203,5 @@
 
         </section>
     </body>
+    <script type="text/javascript" src="./javascripts/gameclient.js"></script>
 </html>
