--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pixel Chess</title>
-        <link rel="stylesheet" href="index.css"/>
+        <link rel="stylesheet" href="../stylesheets/splash.css"/>
     </head>
     <header>
         <button id="darkmode">Dark Mode</button>
