--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -28,26 +28,26 @@
         <table class="chess-board">
             <tbody>
                 <tr>
-                    <td class="white" id="a8"></td>
-                    <td class="black" id="b8"></td>
-                    <td class="white" id="c8"></td>
-                    <td class="black" id="d8"></td>
-                    <td class="white" id="e8"></td>
-                    <td class="black" id="f8"></td>
-                    <td class="white" id="g8"></td>
-                    <td class="black" id="h8"></td>
+                    <td class="white" id="a8"><img src="images/chess/black_rook.png"></td> 
+                    <td class="black" id="b8"><img src="images/chess/black_knight.png"></td>
+                    <td class="white" id="c8"><img src="images/chess/black_bishop.png"></td>
+                    <td class="black" id="d8"><img src="images/chess/black_queen.png"></td>
+                    <td class="white" id="e8"><img src="images/chess/black_king.png"></td>
+                    <td class="black" id="f8"><img src="images/chess/black_bishop.png"></td>
+                    <td class="white" id="g8"><img src="images/chess/black_knight.png"></td>
+                    <td class="black" id="h8"><img src="images/chess/black_rook.png"></td>
                     <th>8</th>
 
                 </tr>
                 <tr>
-                    <td class="black" id="a7"></td>
-                    <td class="white" id="b7"></td>
-                    <td class="black" id="c7"></td>
-                    <td class="white" id="d7"></td>
-                    <td class="black" id="e7"></td>
-                    <td class="white" id="f7"></td>
-                    <td class="black" id="g7"></td>
-                    <td class="white" id="h7"></td>
+                    <td class="black" id="a7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="white" id="b7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="black" id="c7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="white" id="d7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="black" id="e7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="white" id="f7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="black" id="g7"><img src="images/chess/black_pawn.png"></td>
+                    <td class="white" id="h7"><img src="images/chess/black_pawn.png"></td>
                     <th>7</th>
 
                 </tr>
@@ -100,26 +100,26 @@
 
                 </tr>
                 <tr>
-                    <td class="white" id="a2"></td>
-                    <td class="black" id="b2"></td>
-                    <td class="white" id="c2"></td>
-                    <td class="black" id="d2"></td>
-                    <td class="white" id="e2"></td>
-                    <td class="black" id="f2"></td>
-                    <td class="white" id="g2"></td>
-                    <td class="black" id="h2"></td>
+                    <td class="white" id="a2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="black" id="b2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="white" id="c2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="black" id="d2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="white" id="e2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="black" id="f2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="white" id="g2"><img src="images/chess/white_pawn.png"></td>
+                    <td class="black" id="h2"><img src="images/chess/white_pawn.png"></td>
                     <th>2</th>
 
                 </tr>
                 <tr>
-                    <td class="black" id="a1"></td>
-                    <td class="white" id="b1"></td>
-                    <td class="black" id="c1"></td>
-                    <td class="white" id="d1"></td>
-                    <td class="black" id="e1"></td>
-                    <td class="white" id="f1"></td>
-                    <td class="black" id="g1"></td>
-                    <td class="white" id="h1"></td>
+                    <td class="black" id="a1"><img src="images/chess/white_rook.png"></td>
+                    <td class="white" id="b1"><img src="images/chess/white_knight.png"></td>
+                    <td class="black" id="c1"><img src="images/chess/white_bishop.png"></td>
+                    <td class="white" id="d1"><img src="images/chess/white_queen.png"></td>
+                    <td class="black" id="e1"><img src="images/chess/white_king.png"></td>
+                    <td class="white" id="f1"><img src="images/chess/white_bishop.png"></td>
+                    <td class="black" id="g1"><img src="images/chess/white_knight.png"></td>
+                    <td class="white" id="h1"><img src="images/chess/white_rook.png"></td>
                     <th>1</th>
 
                 </tr>
