mess around with messages

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -14,11 +14,8 @@
     <body>
         <main>
             <section id="left-horse">
-                <img src="https://i.imgur.com/2ex6F9b.jpg" alt="Left Horse" width="400" height="400"> 
-
-            </section>
-            <section id="right-horse">
-                <img src="https://i.imgur.com/G8dZR4s.jpg" alt="Right Horse" width="400" height="400">
+                <img src="https://i.imgur.com/2ex6F9b.jpg" class="left-horse" alt="Left Horse" width="400" height="400"> 
+                <img src="https://i.imgur.com/G8dZR4s.jpg" class="right-horse" alt="Right Horse" width="400" height="400">
             </section>
             <section id="buttons">
                 <form action="/play" method="GET">
@@ -32,5 +29,5 @@
             </section>
         </main>
     </body>
-
+    <script type="text/javascript" src="./javascripts/splash.js"></script>
 </html>
