when a player captures a piece or loses one, the target piece will appear at his corresponding table

--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -147,68 +147,69 @@
             </tbody>
         </table>
         <section id="right">
-            <h3>Pieces Lost</h3>
-            <table id="pieces-lost">
+            <div id = table1>
+                <h3>Pieces Lost</h3>
+                <table id="pieces-lost">
+                        <tbody>
+                            <tr>
+                                <td id="l0"></td>
+                                <td id="l1"></td>
+                                <td id="l2"></td>
+                                <td id="l3"></td>
+                            </tr>
+                            <tr>
+                                <td id="l4"></td>
+                                <td id="l5"></td>
+                                <td id="l6"></td>
+                                <td id="l7"></td>
+                            </tr>
+                            <tr>
+                                <td id="l8"></td>
+                                <td id="l9"></td>
+                                <td id="l10"></td>
+                                <td id="l11"></td>
+                            </tr>
+                            <tr>
+                                <td id="l12"></td>
+                                <td id="l13"></td>
+                                <td id="l14"></td>
+                                <td id="l15"></td>
+                            </tr>
+                        </tbody>
+                </table>
+            </div>
+            
+            <div id="table2">
+                <h3>Pieces Gained</h3>
+                <table id="pieces-gained">
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="G0"></td>
+                            <td id="G1"></td>
+                            <td id="G2"></td>
+                            <td id="G3"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="G4"></td>
+                            <td id="G5"></td>
+                            <td id="G6"></td>
+                            <td id="G7"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="G8"></td>
+                            <td id="G9"></td>
+                            <td id="G10"></td>
+                            <td id="G11"></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td id="G12"></td>
+                            <td id="G13"></td>
+                            <td id="G14"></td>
+                            <td id="G15"></td>
                         </tr>
-
                     </tbody>
-
             </table>
-
-            <h3>Pieces Gained</h3>
-
-            <table id="pieces-gained">
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-        </table>
+            </div>
         </section>
     </body>
     <script type="text/javascript" src="./javascripts/gameclient.js"></script>
