mess around with swap rows for switching table

--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="history">
-                <h2>MOVES!</h2>
+                <h2></h2>
                 <div id="historyElements">
                 </div>
             </div>
@@ -37,8 +37,8 @@
         </section>
 
         <table class="chess-board">
-            <tbody>
-                <tr>
+            <tbody id="rows">
+                <tr id="row8">
                     <td class="white" id="a8"><img src="images/chess/black_rook.png" draggable="false" id="black_rook1"></td> 
                     <td class="black" id="b8"><img src="images/chess/black_knight.png" draggable="false" id="black_knight1"></td>
                     <td class="white" id="c8"><img src="images/chess/black_bishop.png" draggable="false" id="black_bishop1"></td>
@@ -50,7 +50,7 @@
                     <th>8</th>
 
                 </tr>
-                <tr>
+                <tr id="row7">
                     <td class="black" id="a7"><img src="images/chess/black_pawn.png" draggable="false" id="black_pawn1"></td>
                     <td class="white" id="b7"><img src="images/chess/black_pawn.png" draggable="false" id="black_pawn2"></td>
                     <td class="black" id="c7"><img src="images/chess/black_pawn.png" draggable="false" id="black_pawn3"></td>
@@ -62,7 +62,7 @@
                     <th>7</th>
 
                 </tr>
-                <tr>
+                <tr id="row6">
                     <td class="white" id="a6"></td>
                     <td class="black" id="b6"></td>
                     <td class="white" id="c6"></td>
@@ -74,7 +74,7 @@
                     <th>6</th>
 
                 </tr>
-                <tr>
+                <tr id="row5">
                     <td class="black" id="a5"></td>
                     <td class="white" id="b5"></td>
                     <td class="black" id="c5"></td>
@@ -86,7 +86,7 @@
                     <th>5</th>
 
                 </tr>
-                <tr>
+                <tr id="row4">
                     <td class="white" id="a4"></td>
                     <td class="black" id="b4"></td>
                     <td class="white" id="c4"></td>
@@ -98,7 +98,7 @@
                     <th>4</th>
 
                 </tr>
-                <tr>
+                <tr id="row3">
                     <td class="black" id="a3"></td>
                     <td class="white" id="b3"></td>
                     <td class="black" id="c3"></td>
@@ -110,7 +110,7 @@
                     <th>3</th>
 
                 </tr>
-                <tr>
+                <tr id="row2">
                     <td class="white" id="a2"><img src="images/chess/white_pawn.png" draggable="false"  id="white_pawn1"></td>
                     <td class="black" id="b2"><img src="images/chess/white_pawn.png" draggable="false"  id="white_pawn2"></td>
                     <td class="white" id="c2"><img src="images/chess/white_pawn.png" draggable="false" id="white_pawn3"></td>
@@ -122,7 +122,7 @@
                     <th>2</th>
 
                 </tr>
-                <tr>
+                <tr id="row1">
                     <td class="black" id="a1"><img src="images/chess/white_rook.png" draggable="false"  id="white_rook1"></td>
                     <td class="white" id="b1"><img src="images/chess/white_knight.png" draggable="false" id="white_knight1"></td>
                     <td class="black" id="c1"><img src="images/chess/white_bishop.png" draggable="false" id="white_bishop1"></td>
