Added Pixel fonts, messed around with styling

--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Pixel Chess</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../stylesheets/play.css">
     </head>
@@ -32,7 +32,7 @@
             </div>
 
             <div id="turn">
-                <h1>YOUR TURN</h1>
+                <h1></h1>
             </div>
         </section>
 
