Added dark mode

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -30,4 +30,5 @@
         </main>
     </body>
     <script type="text/javascript" src="./javascripts/splash.js"></script>
+    <script type="text/javascript" src="./javascripts/darkmode.js"></script>
 </html>
