--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -12,7 +12,7 @@
     </header>
     <header>
         <div id="darkmode">
-            <button>DARK MODE</button>
+            <button class="darkBtn">DARK MODE</button>
         </div>
     </header>
     <body>
@@ -231,4 +231,5 @@
         </section>
     </body>
     <script type="text/javascript" src="./javascripts/gameclient.js"></script>
+    <script type="text/javascript" src="./javascripts/darkmode.js"></script>
 </html>
