Solved some bugs with darkmode

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -14,8 +14,8 @@
     <body>
         <main>
             <section id="left-horse">
-                <img src="https://i.imgur.com/2ex6F9b.jpg" class="left-horse" alt="Left Horse" width="400" height="400"> 
-                <img src="https://i.imgur.com/G8dZR4s.jpg" class="right-horse" alt="Right Horse" width="400" height="400">
+                <img src="images/other/left1.png" class="left-horse" alt="Left Horse" width="400" height="400"> 
+                <img src="images/other/right1.png" class="right-horse" alt="Right Horse" width="400" height="400">
             </section>
             <section id="buttons">
                 <form action="/play" method="GET">
