The games that are finished are deleted from the currentgames Map and added draw panel

--- a/pixel-chess/public/game.html
+++ b/pixel-chess/public/game.html
@@ -182,6 +182,12 @@
                 <p id="private">OPPONENT WON!</p>
                 <button onclick="this.parentElement.style.display='none'" id="exit">OKAY</button>
             </div>
+
+            <div id="drawPanel" style="display:block;">
+                <h1 id="private">DRAW!</h1>
+                <p id="private">IT'S A DRAW!</p>
+                <button onclick="this.parentElement.style.display='none'" id="exit">OKAY</button>
+            </div>
         </section>
         <section id="right">
             <div id = table1>
