Added timer and fixed a bug with darkmode

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../stylesheets/splash.css"/>
     </head>
     <header>
-        <button id="darkmode">Dark Mode</button>
+        <button id="darkmode" class="darkBtn">Dark Mode</button>
         <h1>PIXEL CHESS</h1>
     </header>
     <body>
