Overhauled client-server communication and other small fixes

--- a/pixel-chess/public/play.html
+++ b/pixel-chess/public/play.html
@@ -268,5 +268,6 @@
         </footer>
     </body>
     <script type="text/javascript" src="./javascripts/gameclient.js"></script>
+    <script type="text/javascript" src="./javascripts/messageparser.js"></script>
     <script type="text/javascript" src="./javascripts/darkmode.js"></script>
 </html>
