Worked on div panel for promotion, work will be continued on separate branch

--- a/pixel-chess/public/play.html
+++ b/pixel-chess/public/play.html
@@ -195,6 +195,17 @@
                     <input id="private" onclick="this.parentElement.style.display='none'" type="submit" value="Okay!"/>
                 </form>
             </div>
+            <div id="promotionPanel" style="display:none;">
+                <h1 id="private">Promotion:</h1>
+                <button id="private">Queen</button>
+                <br>
+                <button id="private">Rook</button>
+                <br>
+                <button id="private">Bishop</button>
+                <br>
+                <button id="private">Knight</button>
+                <br>
+            </div>
         </section>
         <section id="right">
             <div id = table1>
