Added promotion (piece doesn't update for opponent yet)

--- a/pixel-chess/public/play.html
+++ b/pixel-chess/public/play.html
@@ -197,13 +197,13 @@
             </div>
             <div id="promotionPanel" style="display:none;">
                 <h1 id="private">Promotion:</h1>
-                <button id="private">Queen</button>
+                <button id="promoteQueen">Queen</button>
                 <br>
-                <button id="private">Rook</button>
+                <button id="promoteRook">Rook</button>
                 <br>
-                <button id="private">Bishop</button>
+                <button id="promoteBishop">Bishop</button>
                 <br>
-                <button id="private">Knight</button>
+                <button id="promoteKnight">Knight</button>
                 <br>
             </div>
         </section>
