Added database to front-end with get request

--- a/pixel-chess/public/splash.html
+++ b/pixel-chess/public/splash.html
@@ -26,6 +26,12 @@
                 </a>
             </section>
             <section id="stats">
+                <p>Games Completed</p>
+                <p id="gamesCompleted"></p>
+                <p>Aborted Games</p>
+                <p id="gamesAborted"></p>
+                <p>Started Games</p>
+                <p id="gamesStarted"></p>
             </section>
         </main>
     </body>
